@@ -1,15 +1,0 @@
-usr/bin/krdc
-usr/lib/*/libkrdccore.so.*.*
-usr/lib/*/libkrdccore.so.5
-usr/lib/*/qt5/plugins/krdc/
-usr/share/applications/org.kde.krdc.desktop
-usr/share/config.kcfg/krdc.kcfg
-usr/share/doc/HTML/*/krdc/
-usr/share/krdc/
-usr/share/kservices5/ServiceMenus/smb2rdc.desktop
-usr/share/kservices5/krdc_rdp_config.desktop
-usr/share/kservices5/krdc_vnc_config.desktop
-usr/share/kservices5/rdp.protocol
-usr/share/kservices5/vnc.protocol
-usr/share/kxmlgui5/krdc/
-usr/share/locale/
