@@ -9,7 +9,10 @@ override_dh_auto_configure:
 	$(overridden_command) -- -DHAVE_XFREERDP=true
 
 override_dh_auto_install:
-	$(overridden_command) --destdir=debian/tmp
+	$(overridden_command)
+	# Drop development files
+	rm -rf debian/krdc/usr/include/
+	find debian/krdc -name '*.so' -type l -delete
 
 override_dh_strip:
 	dh_strip --dbgsym-migration='krdc-dbg (<= 4:15.12.0-1~~)'
